Modules fixed - should compile fine now